--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="dom.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1 id="hello">hello</h1>
  <p>first p tag</p>
  <p>second p tag</p>
  <p>third p tag</p>
@@ -14,6 +14,9 @@
  <div class="error">
     <p >this is an another error message!!!</p>
     <p >this is an another error message!!!</p>
+ </div>
+ <div class="content">
+
  </div>
  
     
