--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -15,7 +15,15 @@
     <p >this is an another error message!!!</p>
     <p >this is an another error message!!!</p>
  </div>
+
+
  <div class="content">
+
+    <div class="box div-1"></div>
+    <div class="box div-1"></div>
+    <div class="box div-1"></div>
+    <div class="box div-1"></div>
+    <div class="box div-1"></div>
 
  </div>
  
